# battery_simulator

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: rqt_multiplot.xml
launch/: battery.launch  fast.launch  graph.launch  p3dx.launch
src/: battery.cpp  fit.cpp  fit.h
